Refactor: Migrate to Vite and reorganize project structure

--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invision - 投資戦略プラットフォーム</title>
+    <title>INVISION — 投資学習アプリ</title>
     <meta name="description" content="投資を始める前に、自分を知る。Invisionは、あなたに最適な投資戦略を導く高品質プラットフォームです。">
+
+    <!-- PWA -->
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#C9A227">
+    <link rel="apple-touch-icon" href="/icons/icon-192.svg">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <!-- OGP -->
+    <meta property="og:title" content="INVISION — 投資学習アプリ">
+    <meta property="og:description" content="投資を始める前に、自分を知る。あなたに最適な投資戦略を導くプラットフォーム。">
+    <meta property="og:image" content="/icons/icon-512.png">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="ja_JP">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="INVISION — 投資学習アプリ">
+    <meta name="twitter:description" content="投資を始める前に、自分を知る。">
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
